/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

syntax = "proto3";

package pb_types.sst;

// Time range of [start, end)
message TimeRange {
  // inclusive
  int64 start = 1;
  // exclusive
  int64 end = 2;
}

message SstMeta {
  uint64 max_sequence = 1;
  uint32 num_rows = 2;
  TimeRange time_range = 3;
}

message SstFile {
  uint64 id = 1;
  SstMeta meta = 2;
}

message Manifest {
  repeated SstFile files = 1;
}

message MetaUpdate {
  repeated SstFile to_adds = 1;
  repeated uint64 to_removes = 2;
}
